--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "install-deps": "cd frontend && npm install"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.75.1",
-    "next": "^14.0.0"
+    "@supabase/supabase-js": "^2.75.1"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.19.22",
     "typescript": "^5.0.0"
   },
   "engines": {
