--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,24 @@
       }
     },
     {
-      "src": "api/**/*.ts",
-      "use": "@vercel/node",
-      "config": {
-        "runtime": "nodejs18.x"
-      }
+      "src": "api/optimize-resume.ts",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "api/generate-pdf.ts",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "api/generate-cover-letter.ts",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "api/history.ts",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "api/test.ts",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
