Connected my Latex to PDF app

--- a/env.example
+++ b/env.example
@@ -12,3 +12,6 @@ VITE_SUPABASE_PUBLISHABLE_KEY=your_supabase_anon_key
 
 # Vercel Configuration
 VERCEL_URL=your_vercel_deployment_url
+
+# LaTeX to PDF API Key
+LATEX_API_KEY=your_latex_api_key_here
