added back routes in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -17,5 +17,15 @@
         "runtime": "nodejs18.x"
       }
     }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/$1"
+    }
   ]
 }
