--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "frontend/dist",
+        "buildCommand": "cd frontend && npm install && npm run build"
       }
     },
     {
@@ -47,12 +48,19 @@
       "dest": "/vercel-api/$1"
     },
     {
+      "src": "/backend",
+      "dest": "backend/main.py"
+    },
+    {
       "src": "/backend/(.*)",
       "dest": "backend/main.py"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "/frontend/dist/index.html"
     }
   ]
 }
