--- a/vercel-frontend/.vercelignore
+++ b/vercel-frontend/.vercelignore
@@ -3,8 +3,8 @@ node_modules/
 frontend/node_modules/
 
 # Build outputs
-frontend/dist/
-frontend/build/
+# frontend/dist/
+# frontend/build/
 
 # Environment files
 .env
