--- a/vercel-frontend/vercel.json
+++ b/vercel-frontend/vercel.json
@@ -48,12 +48,12 @@
       "handle": "filesystem"
     },
     {
-      "src": "/(assets|images|fonts)/.*",
+      "src": "/frontend/dist/(assets|images|fonts)/.*",
       "headers": { "cache-control": "public, max-age=31536000, immutable" }
     },
     {
       "src": "/[^.]+",
-      "dest": "/index.html",
+      "dest": "/frontend/dist/index.html",
       "status": 200
     }
   ]
