Removed Supabase edge functions

--- a/vercel-frontend/env.example
+++ b/vercel-frontend/env.example
@@ -13,5 +13,8 @@ VITE_SUPABASE_PUBLISHABLE_KEY=your_supabase_anon_key
 # Vercel Configuration
 VERCEL_URL=your_vercel_deployment_url
 
+# Python Backend URL (if you are deploying the Python backend separately on Vercel)
+PYTHON_BACKEND_URL=your_python_backend_vercel_url
+
 # LaTeX to PDF API Key
 LATEX_API_KEY=your_latex_api_key_here
