--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-multipart==0.0.6
-pydantic==2.4.2
-starlette==0.27.0
-typing-extensions==4.8.0
-supabase>=1.0.0
-openai>=1.0.0
+fastapi==0.121.0
+uvicorn==0.38.0
+python-multipart==0.0.20
+pydantic==2.12.4
+starlette==0.49.3
+typing-extensions==4.15.0
+supabase==2.23.3
+openai==2.7.1
