--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,5 +5,4 @@ pydantic==2.12.4
 starlette==0.49.3
 typing-extensions==4.15.0
 supabase==2.23.3
-openai==2.7.1
-google-generativeai==0.8.5
+mistralai>=0.1.4
