--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,11 @@
-fastapi==0.121.0
-uvicorn==0.38.0
-python-multipart==0.0.20
-pydantic==2.12.4
-starlette==0.49.3
-typing-extensions==4.15.0
-supabase==2.23.3
-mistralai==1.9.6
-httpx==0.28.0
+fastapi==0.116.1
+uvicorn==0.35.0
+python-multipart==0.0.9
+python-dotenv==1.1.1
+pydantic==2.11.7
+mangum==0.17.0
+mistralai==1.9.2
+supabase==2.17.0
+PyJWT==2.10.1
+httpx==0.28.1
+graphviz==0.20.1
